<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationFragment">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:lines="1"
            android:text="@string/registration"
            android:textColor="@color/chat_darken"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/main_reg_edit_text_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:maxWidth="335dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="25dp"
            android:paddingHorizontal="22dp"
            android:textAllCaps="false"
            android:inputType="textPersonName"
            android:textColorHint="@color/chat_lighten"
            android:hint="@string/login"
            android:textSize="16sp"
            android:background="@drawable/edit_text_back_gray"/>

        <EditText
            android:id="@+id/main_reg_edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:maxWidth="335dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="25dp"
            android:paddingHorizontal="22dp"
            android:textAllCaps="false"
            android:inputType="textPersonName"
            android:textColorHint="@color/chat_lighten"
            android:hint="@string/user_name"
            android:textSize="16sp"
            android:background="@drawable/edit_text_back_gray"/>

        <EditText
            android:id="@+id/main_reg_edit_text_last_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:maxWidth="335dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="25dp"
            android:paddingHorizontal="22dp"
            android:textAllCaps="false"
            android:inputType="textPersonName"
            android:textColorHint="@color/chat_lighten"
            android:hint="@string/user_last_name"
            android:textSize="16sp"
            android:background="@drawable/edit_text_back_gray"/>

        <EditText
            android:id="@+id/main_reg_edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:maxWidth="335dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="25dp"
            android:paddingHorizontal="22dp"
            android:textAllCaps="false"
            android:textColorHint="@color/chat_lighten"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textSize="16sp"
            android:background="@drawable/edit_text_back_gray"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/main_reg_btn_reg"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:maxWidth="335dp"
                android:layout_alignParentBottom="true"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="62dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:text="@string/register"
                android:background="@drawable/btn_ripple_effect"/>

        </RelativeLayout>

    </LinearLayout>

</FrameLayout>