<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clipChildren="false"
    tools:context=".StartFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="356dp">

        <View
            android:id="@+id/main_login_circle_1"
            android:layout_width="154dp"
            android:layout_height="154dp"
            android:layout_marginStart="-64dp"
            android:layout_marginTop="-52dp"
            android:alpha="0.5"
            android:background="@drawable/back_circle_lime" />

        <View
            android:id="@+id/main_login_circle_2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="326dp"
            android:background="@drawable/back_circle_lime_opaque" />

        <View
            android:id="@+id/main_login_circle_3"
            android:layout_width="59dp"
            android:layout_height="59dp"
            android:layout_gravity="end"
            android:layout_marginEnd="-28dp"
            android:layout_marginTop="210dp"
            android:alpha="0.7"
            android:background="@drawable/back_circle_lime" />

        <View
            android:id="@+id/main_login_circle_4"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_gravity="end"
            android:layout_marginEnd="84dp"
            android:layout_marginTop="116dp"
            android:alpha="0.3"
            android:background="@drawable/back_circle_lime_opaque" />


        <ImageView
            android:id="@+id/main_login_img_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginStart="14dp"
            android:layout_marginBottom="41dp"
            android:src="@drawable/img_logo"/>


    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:lines="1"
            android:text="@string/enter"
            android:textColor="@color/chat_darken"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/main_login_edit_text_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:maxWidth="335dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="25dp"
            android:paddingHorizontal="22dp"
            android:textAllCaps="false"
            android:inputType="textPersonName"
            android:textColorHint="@color/chat_lighten"
            android:hint="@string/login"
            android:textSize="16sp"
            android:background="@drawable/edit_text_back_gray"/>

        <EditText
            android:id="@+id/main_login_edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:maxWidth="335dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="25dp"
            android:paddingHorizontal="22dp"
            android:textAllCaps="false"
            android:textColorHint="@color/chat_lighten"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textSize="16sp"
            android:background="@drawable/edit_text_back_gray"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/main_login_btn_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:maxWidth="335dp"
                android:layout_alignParentBottom="true"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="62dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:text="@string/login"
                android:background="@drawable/btn_ripple_effect"/>

            <TextView
                android:id="@+id/main_login_btn_registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="22dp"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:textSize="15sp"
                android:textColor="@color/chat_darken"
                android:text="@string/register_link"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>